<resources>
    <string name="app_name">TopQuizz</string>
    <string name="game_activity_answer1">Answer 1</string>
    <string name="game_activity_answer2">Answer 2</string>
    <string name="game_activity_answer3">Answer 3</string>
    <string name="game_activity_answer4">Answer 4</string>
    <string name="game_activity_question">Question?</string>
    <string name="main_activity_welcome_question">Welcome!!! What\'s your name ?</string>
    <string name="main_activity_hint">type your name here</string>
    <string name="main_activity_play_btn">Let\'s play!</string>

</resources>
