<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".GameActivity">

<TextView
    android:id="@+id/game_activity_question_text"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:text="@string/game_activity_question"
    android:gravity="center"
    android:padding="70dp"
    android:textColor="@color/Blue"
    android:textStyle="bold"
    android:background="@drawable/back"
    android:layout_weight="2"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    >
</TextView>

    <Button
        android:id="@+id/game_activity_activity1_btn"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/game_activity_answer1"
        android:padding="50dp"
        android:textColor="@color/Red"
        android:textStyle="bold"
        android:background="@drawable/back"
        android:layout_margin="5dp"
        android:layout_weight="1"
        >
    </Button>

    <Button
        android:id="@+id/game_activity_activity2_btn"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/game_activity_answer2"
        android:padding="50dp"
        android:textColor="@color/Red"
        android:textStyle="bold"
        android:background="@drawable/back"
        android:layout_margin="5dp"
        android:layout_weight="1"
        >
    </Button>

    <Button
        android:id="@+id/game_activity_activity3_btn"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/game_activity_answer3"
        android:padding="50dp"
        android:textColor="@color/Red"
        android:textStyle="bold"
        android:background="@drawable/back"
        android:layout_margin="5dp"
        android:layout_weight="1"

        >
    </Button>

    <Button
        android:id="@+id/game_activity_activity4_btn"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/game_activity_answer4"
        android:padding="50dp"
        android:textColor="@color/Red"
        android:textStyle="bold"
        android:background="@drawable/back"
        android:layout_margin="5dp"
        android:layout_weight="1"
        >
    </Button>
</LinearLayout>