<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/main_activity_greeting_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_welcome_question"
        android:padding="20dp" />

    <EditText
        android:id="@+id/main_activity_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_hint"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/main_activity_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_play_btn"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginTop="20dp"/>
</LinearLayout>